force-app/main/default/objects/Account/fields/Account_Has_Order__c.field-meta.xml
<CustomField>
    <fullName>Account_Has_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Has Order</label>
    <type>Checkbox</type>
</CustomField>