force-app/main/default/objects/Account/fields/Canadian_Address__c.field-meta.xml
<CustomField>
    <fullName>Canadian_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Canadian Address</label>
    <type>Checkbox</type>
</CustomField>