force-app/main/default/objects/Account/fields/Country_Select__c.field-meta.xml
<CustomField>
    <fullName>Country_Select__c</fullName>
    <label>Country Select</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>