force-app/main/default/objects/Account/fields/Dirty__c.field-meta.xml
<CustomField>
    <fullName>Dirty__c</fullName>
    <label>Dirty</label>
    <length>25</length>
    <type>Text</type>
</CustomField>