force-app/main/default/objects/Account/fields/Distribution_Partner__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Partner__c</fullName>
    <label>Distribution Partner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>