force-app/main/default/objects/Account/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>ExceptionType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>