force-app/main/default/objects/Account/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <label>Integration Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>