force-app/main/default/objects/Account/fields/Primary_Contact_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_s_Email_Address__c</fullName>
    <formula>Primary_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact&apos;s Email Address</label>
    <type>Text</type>
</CustomField>