force-app/main/default/objects/Account/fields/Primary_Contact_Set_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Set_Date_Time__c</fullName>
    <label>Primary Contact Set Date/Time</label>
    <type>DateTime</type>
</CustomField>