force-app/main/default/objects/Account/fields/Prime_Partner__c.field-meta.xml
<CustomField>
    <fullName>Prime_Partner__c</fullName>
    <label>Prime Partner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>