force-app/main/default/objects/Account/fields/Registration_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Registration_Auto_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Registration Auto Number</label>
    <type>AutoNumber</type>
</CustomField>