force-app/main/default/objects/Account/fields/RegistrationPending__c.field-meta.xml
<CustomField>
    <fullName>RegistrationPending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RegistrationPending</label>
    <type>Checkbox</type>
</CustomField>