force-app/main/default/objects/Account/recordTypes/PRO.recordType-meta.xml
<RecordType>
    <fullName>PRO</fullName>
    <active>true</active>
    <label>PRO</label>
</RecordType>