force-app/main/default/objects/Account/recordTypes/Registrant.recordType-meta.xml
<RecordType>
    <fullName>Registrant</fullName>
    <active>true</active>
    <label>Registrant</label>
</RecordType>