force-app/main/default/objects/Account/recordTypes/Unregistered.recordType-meta.xml
<RecordType>
    <fullName>Unregistered</fullName>
    <active>true</active>
    <label>Unregistered</label>
</RecordType>